--- a/wyszukiwarka/index.html
+++ b/wyszukiwarka/index.html
@@ -222,7 +222,7 @@ document.getElementById("szukaj").addEventListener("click", async ()=>{
 
   let query = supabase
     .from("tabela_elektrykow")
-    .select("id,imie,nazwisko,gwiazdki,status")
+    .select("id,imie,nazwisko,miasto,wojewodztwo,gwiazdki,status")
     .eq("wojewodztwo", woj.value)
 
   if(miasto.value){
@@ -249,6 +249,10 @@ document.getElementById("szukaj").addEventListener("click", async ()=>{
       <div class="lp">${i+1}</div>
       <div class="person">
         <div class="name">${e.imie} ${e.nazwisko} ${e.gwiazdki}</div>
+             
+        <div class="small">${e.miasto}</div>
+                <div class="small">${e.wojewodztwo}</div>
+                
         <div class="small">Status: ${e.status}</div>
       <div>
         <button onclick="window.location.href='/profil/index.html?id=${e.id}'">
